Navbar submenu fixed on tablet

--- a/mhoapp/theme/static/mhoapp/main.css
+++ b/mhoapp/theme/static/mhoapp/main.css
@@ -4158,7 +4158,7 @@ select {
       display: flex;
       align-items: center;
       box-sizing: initial !important;
-      padding: .75rem;
+      padding: .75rem .75rem 2rem .75rem;
       text-align: left;
     }
     .luxbar-menu .luxbar-item-a-first-level {
@@ -4173,13 +4173,13 @@ select {
       width: 100%;
     }
         .luxbar-menu .dropdown:hover ul {
-          top: 60px !important;
+          top: 47px !important;
           z-index: 10;
         }
           /* Horizontal line for the 2nd level box in desktop */
           .luxbar-menu .dropdown:hover .luxbar-item-a-first-level:after {
             position: absolute;
-            top: 49px !important;
+            top: 40px !important;
             left: 0;
             content: '';
             height: 5px;
@@ -4208,6 +4208,22 @@ select {
           padding: 0 0 1.35rem 0 !important;
           height: auto !important;
         }
+}
+
+/**
+ * ----------------------------------------
+ * Large screen
+ * ----------------------------------------
+ */
+
+@media (min-width: 1024px) {
+        .luxbar-menu .dropdown:hover ul {
+          top: 60px !important;
+        }
+          /* Horizontal line for the 2nd level box in desktop */
+          .luxbar-menu .dropdown:hover .luxbar-item-a-first-level:after {
+            top: 49px !important;
+          }
 }
 
 /**
